<resources>
    <string name="app_name">weather4</string>
    <string name="weekly_weather">Weekly Weather</string>
    <string name="back_to_welcome">Back to Welcome</string>
    <string name="update_temperatures">Update Temperatures</string>
    <string name="update_temperatures_c">Update Temperatures (°C)</string>
    <string name="monday">Monday:</string>
    <string name="tuesday">Tuesday:</string>
    <string name="wednesday">Wednesday:</string>
    <string name="thursday">Thursday:</string>
    <string name="friday">Friday:</string>
    <string name="saturday">Saturday:</string>
    <string name="sunday">Sunday:</string>
    <string name="back_to_weather">Back to Weather</string>
    <string name="save_changes">Save Changes</string>
    <string name="app_logo">App Logo</string>
</resources>