<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekly_weather"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>


    <TextView
        android:id="@+id/weatherData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>


    <TextView
        android:id="@+id/averageTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>


    <Button
        android:id="@+id/updateTempsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_temperatures"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>


    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_welcome"
        android:textSize="18sp"/>

</LinearLayout>